layout of card with css setup

--- a/src/css/app.less
+++ b/src/css/app.less
@@ -1,2 +1,112 @@
 @import "reset.less";
 
+.card-view {
+    // border: white solid 1px;
+    margin: 20px;
+    width: 300px;
+    height: 420px;
+    position: relative;
+    background-color: black;
+}
+
+.card-name {
+    position: absolute;
+    border: white solid 1px;
+    width: 130px;
+    height: 15px;
+    top: 15px;
+    left: 10px;
+    color: white;
+}
+
+.card-domain {
+    position: absolute;    
+    border: white solid 1px;
+    width: 130px;
+    height: 25px;
+    top: 40px;
+    left: 10px;
+}
+
+.card-map {
+    position: absolute;        
+    border: white solid 1px;
+    width: 60px;
+    height: 30px;
+    top: 15px;
+    right: 10px;
+}
+
+.card-author {
+    position: absolute;            
+    border: white solid 1px;
+    width: 100px;
+    height: 10px;
+    top: 50px;
+    right: 10px;
+    color: white;
+}
+
+.card-image {
+    position: absolute;
+    border: white solid 1px;
+    width: 215px;
+    height: 230px;
+    top: 70px;
+    right: 10px;
+}
+
+.card-habitat {
+    position: absolute;
+    border: white solid 1px;
+    width: 60px;
+    height: 80px;
+    top: 70px;
+    left: 10px;
+}
+
+.card-lifespan {
+    position: absolute;
+    border: white solid 1px;
+    width: 60px;
+    height: 60px;
+    top: 155px;
+    left: 10px;
+}
+
+.card-size {
+    position: absolute;
+    border: white solid 1px;
+    width: 60px;
+    height: 80px;
+    top: 220px;
+    left: 10px;
+}
+
+.card-trophic-level {
+    position: absolute;
+    border: white solid 1px;
+    width: 278px;
+    height: 30px;
+    top: 305px;
+    // right: 10px;
+    left: 10px;
+}
+
+.card-title {
+    position: absolute;
+    border: white solid 1px;
+    width: 278px;
+    height: 65px;
+    top: 340px;
+    // right: 10px;
+    left: 10px
+}
+
+.card-nocturnal {
+    visibility: hidden;
+}
+
+.card-super-defender {
+    visibility: hidden;
+}
