--- a/src/css/app.less
+++ b/src/css/app.less
@@ -1,7 +1,6 @@
 @import "reset.less";
 
 .card-view {
-    // border: white solid 1px;
     margin: 20px;
     width: 300px;
     height: 420px;
@@ -12,10 +11,12 @@
 
 .card-name {
     position: absolute;
-    border: white solid 1px;
+    font-size: 16px;
+    font-style: bold;
+    text-align: left;
     width: 130px;
     height: 15px;
-    top: 15px;
+    top: 10px;
     left: 10px;
     color: white;
 }
@@ -40,8 +41,11 @@
 
 .card-author {
     position: absolute;            
-    border: white solid 1px;
+    // border: white solid 1px;
+    font-size: 10px;
+    font-style: bold;
     width: 100px;
+    text-align: right;
     height: 10px;
     top: 50px;
     right: 10px;
@@ -63,7 +67,7 @@
     height: 80px;
     top: 70px;
     left: 10px;
-    background-color: lightgray;
+    background-color: #EAE8E3;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -71,7 +75,7 @@
 
 .card-lifespan {
     position: absolute;
-    border: white solid 1px;
+    background-color:#EAE8E3;
     width: 60px;
     height: 60px;
     top: 155px;
@@ -89,11 +93,10 @@
 
 .card-trophic-level {
     position: absolute;
-    border: white solid 1px;
+    background-color: white;
     width: 280px;
     height: 30px;
     top: 305px;
-    // right: 10px;
     left: 10px;
 }
 
@@ -126,4 +129,6 @@
 .habitat-card-name {
     position: absolute;
     top: 50px;
+    font-size: 8px;
+    font-weight: bold;
 }
