domain icons all added and functional; cropping image better; size icon figured out; other style changes

--- a/src/css/app.less
+++ b/src/css/app.less
@@ -1,5 +1,9 @@
 @import "reset.less";
 
+.form-box {
+    border: 1px black solid;
+}
+
 .card-view {
     margin: 20px;
     width: 300px;
@@ -14,7 +18,7 @@
     font-size: 16px;
     font-style: bold;
     text-align: left;
-    width: 130px;
+    width: 200px;
     height: 15px;
     top: 10px;
     left: 10px;
@@ -23,11 +27,21 @@
 
 .card-domain {
     position: absolute;    
-    border: white solid 1px;
+    text-align: left;
+    display: flex;
+    flex-direction: row;
     width: 130px;
     height: 25px;
     top: 40px;
     left: 10px;
+}
+
+.domain-card-name {
+    color: white;
+    font-size: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .card-map {
@@ -41,7 +55,6 @@
 
 .card-author {
     position: absolute;            
-    // border: white solid 1px;
     font-size: 10px;
     font-style: bold;
     width: 100px;
@@ -52,13 +65,24 @@
     color: white;
 }
 
-.card-image {
+.card-image-container {
     position: absolute;
-    border: white solid 1px;
     width: 215px;
     height: 230px;
     top: 70px;
     right: 10px;
+    overflow: hidden;
+}
+
+.card-image {
+    position: absolute;
+    margin: auto; 
+    min-height: 100%;
+    min-width: 100%;
+    left: -100%;
+    right: -100%;
+    top: -100%;
+    bottom: -100%;
 }
 
 .card-habitat {
@@ -82,18 +106,72 @@
     left: 10px;
 }
 
+.lifespan-card-name {
+    font-size: 8px;
+    font-weight: bold;
+    color: black;
+}
+
+.lifespan-card-heart {
+    padding-top: 5px;
+}
+
+.card-lifespan-number {
+    text-align: center;
+    width: 100%;
+    top: 15px;
+    position: absolute;
+    color: white;
+    font-size: 12px;
+}
+
 .card-size {
     position: absolute;
-    border: white solid 1px;
+    background-color: #EAE8E3;
+    text-align: left;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 3px;
     width: 60px;
     height: 80px;
     top: 220px;
     left: 10px;
+
+    .h3 {
+        color: black;
+        font-size: 10px;
+        font-weight: bold;
+    }
+
+    .size-card-feet-number {
+        display: flex;
+        font-size: 20px;
+        font-weight: bolder;
+        position: absolute;
+        top: 4px;
+    }
+
+    .size-card-inches-number {
+        display: flex;
+        font-size: 20px;
+        font-weight: bolder;
+        position: absolute;
+        top: 26px;
+    }
+
+    .size-small {
+        color: black;
+        font-size: 8px;
+        font-weight: bold;
+        align-self: center;
+    }
 }
 
 .card-trophic-level {
     position: absolute;
     background-color: white;
+    text-align: left;
     width: 280px;
     height: 30px;
     top: 305px;
@@ -105,7 +183,21 @@
     width: 280px;
     height: 65px;
     top: 340px;
-    left: 10px
+    left: 10px;
+    padding: 3px;
+    overflow: hidden;
+}
+
+.card-title {
+    color: white;
+    text-align: left;
+    font-weight: bold;
+}
+
+.card-description {
+    color: white;
+    text-align: left;
+    line-height: 1.2;
 }
 
 .card-nocturnal {
@@ -128,7 +220,14 @@
 
 .habitat-card-name {
     position: absolute;
-    top: 50px;
+    top: 60px;
+    font-size: 8px;
+    font-weight: bold;
+}
+
+.size-card-name {
+    position: absolute;
+    top: 65px;
     font-size: 8px;
     font-weight: bold;
 }
