nocturnal image updated and functional

--- a/src/css/app.less
+++ b/src/css/app.less
@@ -201,7 +201,9 @@
 }
 
 .card-nocturnal {
-    visibility: hidden;
+    top: 250px;
+    right: 10px;
+    position: absolute;
 }
 
 .card-super-defender {
@@ -213,6 +215,16 @@
 }
 
 .dropdown-habitat-container {
+    display: flex;
+    height: 30px;
+    align-items: center;
+}
+
+.dropdown-nocturnal {
+    width: 20px;    
+}
+
+.dropdown-nocturnal-container {
     display: flex;
     height: 30px;
     align-items: center;
