--- a/src/css/app.less
+++ b/src/css/app.less
@@ -1,5 +1,9 @@
 @import "reset.less";
 
+body {
+    font-family: Helvetica, Arial, sans-serif
+}
+
 .form-box {
     border: 1px black solid;
 }
@@ -15,7 +19,7 @@
 
 .card-name {
     position: absolute;
-    font-size: 16px;
+    font-size: 18px;
     font-style: bold;
     text-align: left;
     width: 200px;
@@ -33,7 +37,7 @@
     width: 130px;
     height: 25px;
     top: 40px;
-    left: 10px;
+    left: 7px;
 }
 
 .domain-card-name {
@@ -44,7 +48,7 @@
     justify-content: center;
 }
 
-.card-map {
+.card-set {
     position: absolute;        
     border: white solid 1px;
     width: 60px;
@@ -88,41 +92,51 @@
 .card-habitat {
     position: absolute;
     width: 60px;
-    height: 80px;
+    height: 75px;
     top: 70px;
     left: 10px;
     background-color: #EAE8E3;
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    .habitat-card-name {
+        position: absolute;
+        top: 60px;
+        font-size: 8px;
+        font-weight: bold;
+    }
 }
 
 .card-lifespan {
     position: absolute;
     background-color:#EAE8E3;
     width: 60px;
-    height: 60px;
-    top: 155px;
+    height: 70px;
+    top: 150px;
     left: 10px;
-}
+    display: flex;
+    justify-content: center;
 
-.lifespan-card-name {
-    font-size: 8px;
-    font-weight: bold;
-    color: black;
-}
-
-.lifespan-card-heart {
-    padding-top: 5px;
-}
-
-.card-lifespan-number {
-    text-align: center;
-    width: 100%;
-    top: 15px;
-    position: absolute;
-    color: white;
-    font-size: 12px;
+    .lifespan-card-name {
+        font-size: 8px;
+        font-weight: bold;
+        color: black;
+        position: absolute;
+        top: 55px;
+    }
+    
+    .lifespan-card-heart {
+        position: absolute;
+        top: 10px;
+    }
+    
+    .card-lifespan-number {
+        top: 20px;
+        position: absolute;
+        color: white;
+        font-size: 12px;
+    }
 }
 
 .card-size {
@@ -134,13 +148,20 @@
     align-items: center;
     padding: 3px;
     width: 60px;
-    height: 80px;
-    top: 220px;
+    height: 75px;
+    top: 225px;
     left: 10px;
 
     .h3 {
         color: black;
         font-size: 10px;
+        font-weight: bold;
+    }
+
+    .size-card-name {
+        position: absolute;
+        top: 60px;
+        font-size: 8px;
         font-weight: bold;
     }
 
@@ -165,6 +186,7 @@
         font-size: 8px;
         font-weight: bold;
         align-self: center;
+        padding-left: 2px;
     }
 }
 
@@ -192,12 +214,14 @@
     color: white;
     text-align: left;
     font-weight: bold;
+    margin-left: 4px;
 }
 
 .card-description {
     color: white;
     text-align: left;
     line-height: 1.2;
+    margin-left: 4px;
 }
 
 .card-nocturnal {
@@ -228,18 +252,4 @@
     display: flex;
     height: 30px;
     align-items: center;
-}
-
-.habitat-card-name {
-    position: absolute;
-    top: 60px;
-    font-size: 8px;
-    font-weight: bold;
-}
-
-.size-card-name {
-    position: absolute;
-    top: 65px;
-    font-size: 8px;
-    font-weight: bold;
 }
