--- a/src/css/app.less
+++ b/src/css/app.less
@@ -4,12 +4,35 @@ body {
     font-family: Helvetica, Arial, sans-serif
 }
 
-.form-box {
-    border: 1px black solid;
+.landing-page {
+    margin-top: 56px;
+}
+
+.welcome-box {
+    margin-top: 32px;
+}
+
+.gallery-box {
+    margin-top: 48px;
+}
+
+.button-box {
+    .next-button {
+        position: absolute;
+        right: 70px;
+        top: 420px;
+    }
+
+    .prev-button {
+        position: absolute;
+        left: 70px;
+        top: 420px;
+    }
 }
 
 .card-view {
     margin: 20px;
+    margin-top: 60px;
     width: 300px;
     height: 420px;
     position: relative;
@@ -19,8 +42,8 @@ body {
 
 .card-name {
     position: absolute;
-    font-size: 18px;
-    font-style: bold;
+    font-size: 16px;
+    font-weight: 500px;
     text-align: left;
     width: 200px;
     height: 15px;
@@ -55,6 +78,14 @@ body {
     height: 30px;
     top: 15px;
     right: 10px;
+}
+
+.card-set-name {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 16px;
+    font-weight: 200px;
 }
 
 .card-author {
