only allow complete cards to be shown

--- a/src/css/app.less
+++ b/src/css/app.less
@@ -16,6 +16,11 @@ body {
     margin-top: 48px;
 }
 
+.gallery-card-container {
+    display: inline-flex;
+    flex-wrap: wrap;
+}
+
 .button-box {
     .next-button {
         position: absolute;
