fixed several css bugs; added naive create new card; gallery fixes

--- a/src/css/app.less
+++ b/src/css/app.less
@@ -21,6 +21,14 @@ body {
     flex-wrap: wrap;
 }
 
+.input-string {
+    padding: 15px;
+}
+
+.progress-bar {
+    padding-bottom: 20px;
+}
+
 .button-box {
     .next-button {
         position: absolute;
@@ -115,14 +123,10 @@ body {
 }
 
 .card-image {
-    position: absolute;
-    margin: auto; 
-    min-height: 100%;
-    min-width: 100%;
-    left: -100%;
-    right: -100%;
-    top: -100%;
-    bottom: -100%;
+    max-height: 200%;
+    max-width: 200%;
+    height: 100%;
+    width: auto;
 }
 
 .card-habitat {
