--- a/src/css/app.less
+++ b/src/css/app.less
@@ -4,6 +4,12 @@ body {
     font-family: Helvetica, Arial, sans-serif
 }
 
+.app-header {
+    width: 100%;
+    height: 48px !important;
+    display: flex;
+}
+
 .landing-page {
     margin-top: 56px;
 }
@@ -41,6 +47,19 @@ body {
         left: 70px;
         top: 420px;
     }
+}
+
+.create-new-card {
+    position: absolute !important;
+    right: 20px !important;
+}
+
+.logo {
+    color: white;
+    font-size: 20px;
+    font-weight: bold;
+    padding-right: 20px;
+    align-self: center;
 }
 
 .card-view {
